data/derived/comb/progs/unify/prog7382.ml.out
Characters 209-213:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type ('a list * 'b list) list
       but an expression was expected of type int list * int list
